# GadoWallet

./: .gitignore  .vercelignore  BUILD_FIX_SUMMARY.md  BUSINESS_MODEL_SUMMARY.md  DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  ENVIRONMENT.md  FINAL_ITERATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  SECURITY_ADVISORY.md  build.sh  check-profile.js  comprehensive-test.js  deploy-production.sh  deploy.sh  diagnose-inheritance.js  fresh-test-setup.js  launch-production.sh  package-lock.json  package.json  reset-user-profiles.js  setup-fresh-test.sh  test-complete-workflow.js  vercel.json  verify-deployment.sh
.github/: dependabot.yml
gada/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  SMART_WALLET_README.md  demo-business-model.ts  demo-business.js  demo-smart-wallet.js  demo-smart-wallet.ts  generate-keypair.js  keeper-bot.ts  package-lock.json  package.json  smart-wallet-client.js  smart-wallet-client.ts  test-business-model.js  test-smart-wallet.js  test-smart-wallet.ts  tsconfig.json
gada/frontend/: BUILD_GUIDE.md  CIVIC_INTEGRATION_COMPLETE.md  DESIGN_SYSTEM.md  FIXES_APPLIED.md  README.md  REDESIGN_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
gada/frontend/src/: App.tsx  index.css
gada/frontend/src/__tests__/: integration.test.ts
gada/frontend/src/components/: CivicVerification.tsx  Footer.tsx  LoadingSpinner.tsx  Navbar.tsx  ProgramStatus.tsx  Toast.tsx
gada/programs/gada/: Cargo.toml
gada/tests/: business-model-simple.ts  business-model.ts  gada.ts
(+251 files in other folders)
