[package]
name = "gada"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gada"

[features]
default = ["idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
short-claim-delay = []

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[profile.release]
opt-level = "z"
debug = false
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive", "init-if-needed"] }
anchor-spl = { version = "0.31.1", default-features = false, features = ["token", "token_2022", "associated_token"] }

